# Sky_Pro_coursework_1.0

./: .env_template  .gitignore  README.md  pyproject.toml
data/: data.json  my_operations_may.csv  my_operations_may.xlsx  services.json  spending_by_category_report.json  views.json
src/: data.json  main.py  report.json  reports.py  services.py  utils.py  views.py
src/data/: spending_by_category_20250430_134801.json  spending_by_category_20250430_162813.json  spending_by_category_20250503_162336.json
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
